--- a/ToDo List/index.html
+++ b/ToDo List/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="bg-gray-900 pt-2.5"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
